add join-project list swagger
